# aiffel

2022/EXPLORATION/Node_01/: [E-01] Only_LMS_Code_Blocks.ipynb
2022/GOING_DEEPER_CV/Node_10/: [CV-10] Only_LMS_Code_Blocks.ipynb
2022/GOING_DEEPER_CV/Node_12/: [CV-12] Recognition_CRNN_of_Keras_OCR.ipynb
aiffel/DLthon/: korean-classification.ipynb  plain-conversation.txt  sample_answersheet.json  test.json
aiffel/class_activation_map/: README.md  [CV-06] CAM_vs_Grad_CAM.ipynb  goingdeeper-9.ipynb
aiffel/data_augmentation/: 240702_data_augmentation.ipynb  cv5.ipynb  cv6.ipynb  cv6_1.ipynb
aiffel/deepdive/node25/: ch25.ipynb
aiffel/deepdive22/: 22.사람의몸짓을읽어보자.ipynb
aiffel/fundamentals/240529_kaggle/: README.md
aiffel/fundamentals/autoencoder/: autoencoder.ipynb
aiffel/fundamentals/data_augmentation/: cv5.ipynb
aiffel/fundamentals/songys_chatbot/: [E-12] Only_LMS_Code_Blocks.ipynb
aiffel/mlops/day2/: Dockerfile.mysql  Dockerfile.postgresql  README.md  (+2 more)
aiffel/resnet/: 240701_resnet.ipynb  README.md
deep-learning-with-python-2nd/: README.md  chapter12_part04_variational-autoencoders.ipynb
keras-deeplearning/MainQuest_gpt1/: 240621_gpt1.ipynb
keras-deeplearning/songys_chatbot/: 240619_songys_chatbot.ipynb  [E-12] Korean_Chatbot.ipynb  pyproject.toml
machine/: ch1.ipynb
mlops-for-mle/part2/: .gitignore  Makefile  base_train.py  db_train.py
mlops-for-mle/part3/: docker-compose.yaml  load_model_from_registry.py
mlops-for-mle/part5/: Dockerfile
opencourse/: cnn.ipynb
solo-machine-learning/: ch02.ipynb  ch07.ipynb  keras-ch1.ipynb
(+16 files in other folders)
